tests/NormalTests/paczka2/big_fuzzy/53286011.err
Error in line 4: A398 S225 10,0
Error in line 10: 8haM A763 246,90
Error in line 1: 8haM A763 64,9
Error in line 12: 8haM A75 75,1
Error in line 14: 8haM A398 4,8
Error in line 38: A398 A763 9,8
Error in line 77: sczkiioo S225 11,23
Error in line 63: A398 A75 24,2
Error in line 79: sczkiioo A398 99,9
Error in line 88: PjSqkjO7 S225 87,4
Error in line 89: PjSqkjO7 A75 64,1
Error in line 97: A398 A75 39,7
Error in line 93: toF S225 214,0
Error in line 90: 8haM A763 95,6
Error in line 110: 8haM S225 42,47
Error in line 111: A398 A75 86,8
Error in line 109: 8haM S225 26,0
Error in line 126: 8haM A75 73,81
Error in line 108: toF A75 59,9
Error in line 133: yL8Ln93zPin A763 0,8
Error in line 138: toF A398 54,0
Error in line 145: PjSqkjO7 A763 3,9
Error in line 153: AOul S225 26,6
Error in line 157: yL8Ln93zPin S225 10,7
Error in line 163: 8haM A398 0,3
Error in line 170: toF A763 19,3
Error in line 189: yL8Ln93zPin Au63 33,2
Error in line 190: A398 S225 34,1
Error in line 209: yL8Ln93zPin A398 34,93
Error in line 214: 8haM A763 56,2
Error in line 220: 8haM A398 67,0
Error in line 218: A398 S225 14,3
Error in line 232: 8haM S225 72,8
Error in line 231: PjSqkjO7 A75 7,3
Error in line 219: yL8Ln93zPin S225 228,3
